@@ -230,6 +230,8 @@ x2goserver (4.1.0.4-0x2go1.2) UNRELEASED; urgency=medium
       switch.
     - x2goserver/lib/x2goupdateoptionsstring: split up GetOptionsFromArray ()
       line. Non-functional.
+    - X2Go/Server/Agent/NX/Options.pm: document the new
+      compact_intermediate () function and its implications.
   * debian/control:
     + Build-depend upon lsb-release for distro version detection.
   * debian/x2goserver.manpages:
